<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="40dp"
        android:background="#6C0404"
        android:fontFamily="monospace"
        android:scrollHorizontally="false"
        android:text="@string/enla"
        android:textAlignment="inherit"
        android:textColor="#F1EDED"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/tecla"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="413dp"
        android:layout_height="59dp"
        android:background="#4E0202"
        android:capitalize="characters"
        android:fontFamily="monospace"
        android:text="@string/definicion"
        android:textAlignment="center"
        android:textColor="#F8F1F1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tecla"
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:hint="@string/escribirPosicion"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.47000003" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="84dp"
        android:background="#6C0404"
        android:fontFamily="monospace"
        android:scrollHorizontally="false"
        android:text="@string/resultado"
        android:textAlignment="gravity"
        android:textColor="#F1EDED"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/text"
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="84dp"
        android:textAlignment="inherit"
        android:textColor="#CC1010"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tecla" />

    <Button
        android:id="@+id/button"
        android:layout_width="104dp"
        android:layout_height="66dp"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="196dp"
        android:onClick="calcular"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>